# vm_course

./: CMakeLists.txt  isa.yaml  main.cpp
arena/: CMakeLists.txt
arena/include/arena/: arena.h
benchmarks/: CMakeLists.txt  cyclical.java  cyclical.txt  recursive.java
benchmarks/cyclical/: cyclical.cpp
benchmarks/recursive/: rec_marked  recursive.cpp  recursive.java  recursive.txt
bytecode/: CMakeLists.txt
bytecode/include/: bytecode.h  instruction.h
executor/: CMakeLists.txt
executor/include/: executor.h  instruction_impl.h
executor/src/: executor.cpp
frame/: CMakeLists.txt
frame/include/: frame.h  method.h  stack.h
scripts/: stupid_marker.py
vm/: CMakeLists.txt  main.cpp
vm/include/: builder.hpp  bytecode.hpp  executor.hpp  frame.hpp  machine.hpp  method.hpp  stack.hpp
vm/src/: builder.cpp  executor.cpp  machine.cpp
